welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: ')' expected but 'if' found.
	if (croisement && nbB>=3){
        ^Poucet:13: error: 'while' expected but 'else' found.
	else droite()
        ^Poucet:18: error: '(' expected but '}' found.
	}
        ^